$Id: ChangeLog,v 1.26 2008/03/11 07:31:11 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/kl/cont/gb/html/libu.html

LibU 1.2.0:
	- [pwd] added new module for simple password authentication, can be
	  disabled via --no_pwd configuration argument 
	- [fs] added new module with u_move, u_copy and u_remove interfaces,
	  can be disabled via --no_fs configuration argument 
	- [config] u_config_set_value's now in the public interface
	- [config] u_config_get_child_n can return anonymous keys
	- [hmap] fix compilation error with GCC 2.95

LibU 1.1.0:
	- [missing, misc] windows mingw fixes
	- [hmap] u_hmap_foreach_keyval() function added (by Aurelio Colosimo)
	- [log] u_strerror_r fix to make it working on 64bit platforms
	- [carpal] dbg_if{,m}() fix

LibU 1.0.0:
	- [hmap] module rework: implemented linear probing and array resizing based
	  on prime numbers; void *key, *val in u_hmap_o_t; new interfaces for 
	  managing own data or giving hmap ownership and returning overwritten 
	  objects
	- [test] added the unit test module; tests can be separated by module 
	  and/or functionality and can run selectively or all at once
	- [misc] added u_{read,write,accept,sleep} auto-restarting functions that 
	  transparently handle EINTR
	- [memory] added u_memory_set_{{m,c,re}alloc,free} function by which the
	  user can override the default memory manager (i.e. libc malloc)
	- [config] load in overwrite mode fix

LibU 0.5.0:
	- mkstemps() added to the portability layer
	- clean separation of "toolbox" modules (i.e. log, env, carpal, etc.)
	  from "portability" modules (i.e. strlcat/gettimeofday/etc. replacements)
	- [net] added UNIX socket support
	- [queue] {LIST,TAILQ}_FOREACH_SAFE and TAILQ_FOREACH_REVERSE{_SAFE,} 
	  added
	- [config] leak fixed in u_config_do_load(); added new function 
	  u_config_load_from_file(); cs_getline (internal function) fix
	- [misc] added new functions u_load_file(), u_data_dump()
	- [env] portability fix