@@ -1,1 +1,1 @@
-1.2.0rc2
+1.2.0rc3
