@@ -1,10 +1,10 @@
-# $Id: Makefile,v 1.4 2008/03/10 15:32:52 tho Exp $
+# $Id: Makefile,v 1.5 2008/04/02 10:12:49 tho Exp $
 
 include common.mk
 include ../../Makefile.conf
 
 INCS = buf.h carpal.h config.h env.h hmap.h log.h logprv.h memory.h misc.h \
-       net.h queue.h str.h uri.h fs.h test.h pwd.h
+       net.h queue.h str.h uri.h fs.h test.h pwd.h list.h
 
 INCDIR := $(INCDIR)/toolbox
 
