@@ -1,8 +1,10 @@
-$Id: ChangeLog,v 1.26 2008/03/11 07:31:11 tho Exp $
+$Id: ChangeLog,v 1.27 2008/04/02 10:12:49 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/kl/cont/gb/html/libu.html
 
 LibU 1.2.0:
+	- [list] added new module for dynamic lists handling (wrapper around
+	  TAILQ_ macros), can be disabled via --no_list configuration argument
 	- [pwd] added new module for simple password authentication, can be
 	  disabled via --no_pwd configuration argument 
 	- [fs] added new module with u_move, u_copy and u_remove interfaces,
